2005-11-24  Julien MOUTTE  <julien@moutte.net>

	* gst/effectv/gstquark.c: (gst_quarktv_set_caps),
	(gst_quarktv_get_unit_size), (gst_quarktv_transform),
	(gst_quarktv_planetable_clear), (gst_quarktv_change_state),
	(gst_quarktv_base_init), (gst_quarktv_class_init),
	(gst_quarktv_init): Flush the planes list on reverse caps
	negotiation. This was crashing because of differently sized
	buffers.

2005-11-24  Julien MOUTTE  <julien@moutte.net>

	* gst/debug/gstnavigationtest.c: (draw_box_planar411):
	* gst/videofilter/gstvideoflip.c: (gst_videoflip_method_get_type),
	(gst_videoflip_set_caps), (gst_videoflip_transform_caps),
	(gst_videoflip_get_unit_size), (gst_videoflip_flip),
	(gst_videoflip_transform), (gst_videoflip_handle_src_event),
	(gst_videoflip_set_property), (gst_videoflip_base_init),
	(gst_videoflip_class_init), (gst_videoflip_init): Handle strides
	correctly, fix identity flipping, convert navigation event 
	correctly again.

2005-11-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: back to HEAD

=== release 0.9.6 ===

2005-11-23  Thomas Vander Stichele <thomas at apestaart dot org>

	* configure.ac:
	  releasing 0.9.6, "Everything's Not Lost"

2005-11-23  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/debug/gstnavigationtest.c: (gst_navigationtest_init):
	Oops, initialise the framerate GValue

2005-11-23  Julien MOUTTE  <julien@moutte.net>

	* ext/cairo/gsttimeoverlay.c: (gst_timeoverlay_update_font_height),
	(gst_timeoverlay_set_caps), (gst_timeoverlay_get_unit_size),
	(gst_timeoverlay_transform), (gst_timeoverlay_base_init),
	(gst_timeoverlay_class_init), (gst_timeoverlay_init),
	(gst_timeoverlay_get_type):
	* ext/cairo/gsttimeoverlay.h:
	* gst/debug/Makefile.am:
	* gst/debug/gstnavigationtest.c:
	(gst_navigationtest_handle_src_event),
	(gst_navigationtest_get_unit_size), (gst_navigationtest_set_caps),
	(gst_navigationtest_transform), (gst_navigationtest_change_state),